<resources>
    <string name="app_name">ExerciseTracker</string>
    <string name="exercises">Exercises</string>
    <string name="history">History</string>
    <string name="start_workout">Start Workout</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="quick_start">Quick Start</string>
    <string name="routines">Routines</string>
    <string name="add_routine">Add Routine</string>
    <string name="body_part">Body Part</string>
    <string name="add_name">Add Name</string>
    <string name="save">Save</string>
    <string name="routine_title">Routine Title</string>
    <string name="finish">Finish</string>
    <string name="lbs">lbs</string>
    <string name="reps">reps</string>
    <string name="history_exercises">%text</string>
    <string name="instructions">Select a routine to start.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="no_credentials">Please enter credentials.</string>
    <string name="wrong_credentials">Credentials are incorrect.</string>
</resources>
